// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all bugs field present 1`] = `
{
  "email": "bugs@foobar.local",
  "url": "bugs.foobar.local",
}
`;

exports[`no bugs field present 1`] = `undefined`;

exports[`npm overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "overrides": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "pnpm": {
    "overrides": {
      "other-dep": "*",
      "some-dep": "1.0.0",
    },
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`single bugs field present 1`] = `
{
  "email": "bugs@foobar.local",
}
`;

exports[`yarn resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn2 resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;
